# ge-pipe

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _schema.yml  agg_flip_opportunities.sql  agg_item_liquidity.sql  agg_item_volatility.sql  dim_items.sql  fct_prices.sql  realized_fills.sql
dbt/models/staging/: _sources.yml  stg_item_mapping.sql  stg_prices_1h.sql  stg_prices_5m.sql  stg_prices_latest.sql  stg_realized_fills.sql
dbt/seeds/: buy_limit_overrides.csv  tax_exempt_items.csv
dbt/tests/: assert_price_high_gte_low.sql
docs/: agg_flip_changes.md  realized_fills_bot_integration.md
ge_pipe/: settings.py
ge_pipe/dagster_defs/: __init__.py  assets.py
ge_pipe/extract/: client.py  mapping.py  prices.py
ge_pipe/load/: base.py  mapping.py  prices.py
init_db/: 001_create_schemas.sql  002_create_prices_latest.sql  003_create_prices_1h.sql  004_create_realized_fills.sql
scripts/: entrypoint.sh
